--- a/crescentmax/_posts/2024-10-16-common-ui.md
+++ b/crescentmax/_posts/2024-10-16-common-ui.md
@@ -1,7 +1,10 @@
 ---
 title: "Common UI"
-layout: single
+layout: post
+tags: [Unreal, UI, Programming]
 ---
+
+Notes for UE5 Common UI plugin.
 
 # I. Overview
 
@@ -55,66 +58,66 @@ By default, an activatable widget:
 - If classified as a back handler, is automatically deactivated (but not destroyed) when it receives a back action
 - `OnActivated` & `OnDeactivated`
     
-    ```cpp
-    void UCommonActivatableWidget::NativeOnActivated()
-    {
-    	if (ensureMsgf(bIsActive, TEXT("[%s] has called NativeOnActivated, but isn't actually activated! Never call this directly - call ActivateWidget()")))
-    	{
-    		if (bSetVisibilityOnActivated)
-    		{
-    			SetVisibility(ActivatedVisibility);
-    			UE_LOG(LogCommonUI, Verbose, TEXT("[%s] set visibility to [%s] on activation"), *GetName(), *StaticEnum<ESlateVisibility>()->GetDisplayValueAsText(ActivatedVisibility).ToString());
-    		}
-    
-    		if (CommonUI::IsEnhancedInputSupportEnabled() && InputMapping)
-    		{
-    			if (const ULocalPlayer* LocalPlayer = GetOwningLocalPlayer())
-    			{
-    				if (UEnhancedInputLocalPlayerSubsystem* InputSystem = LocalPlayer->GetSubsystem<UEnhancedInputLocalPlayerSubsystem>())
-    				{
-    					InputSystem->AddMappingContext(InputMapping, InputMappingPriority);
-    				}
-    			}
-    		}
-    
-    		BP_OnActivated();
-    		OnActivated().Broadcast();
-    		BP_OnWidgetActivated.Broadcast();
-    	}
-    }
-    ```
-    
-    ```cpp
-    void UCommonActivatableWidget::NativeOnDeactivated()
-    {
-    	if (ensure(!bIsActive))
-    	{
-    		if (bSetVisibilityOnDeactivated)
-    		{
-    			SetVisibility(DeactivatedVisibility);
-    			UE_LOG(LogCommonUI, Verbose, TEXT("[%s] set visibility to [%d] on deactivation"), *GetName(), *StaticEnum<ESlateVisibility>()->GetDisplayValueAsText(DeactivatedVisibility).ToString());
-    		}
-    
-    		if (CommonUI::IsEnhancedInputSupportEnabled() && InputMapping)
-    		{
-    			if (const ULocalPlayer* LocalPlayer = GetOwningLocalPlayer())
-    			{
-    				if (UEnhancedInputLocalPlayerSubsystem* InputSystem = LocalPlayer->GetSubsystem<UEnhancedInputLocalPlayerSubsystem>())
-    				{
-    					InputSystem->RemoveMappingContext(InputMapping);
-    				}
-    			}
-    		}
-    
-    		// Cancel any holds that were active
-    		ClearActiveHoldInputs();
-    
-    		BP_OnDeactivated();
-    		OnDeactivated().Broadcast();
-    		BP_OnWidgetDeactivated.Broadcast();
-    	}
-    }
-    ```
+```cpp
+void UCommonActivatableWidget::NativeOnActivated()
+{
+	if (ensureMsgf(bIsActive, TEXT("[%s] has called NativeOnActivated, but isn't actually activated! Never call this directly - call ActivateWidget()")))
+	{
+		if (bSetVisibilityOnActivated)
+		{
+			SetVisibility(ActivatedVisibility);
+			UE_LOG(LogCommonUI, Verbose, TEXT("[%s] set visibility to [%s] on activation"), *GetName(), *StaticEnum<ESlateVisibility>()->GetDisplayValueAsText(ActivatedVisibility).ToString());
+		}
+
+		if (CommonUI::IsEnhancedInputSupportEnabled() && InputMapping)
+		{
+			if (const ULocalPlayer* LocalPlayer = GetOwningLocalPlayer())
+			{
+				if (UEnhancedInputLocalPlayerSubsystem* InputSystem = LocalPlayer->GetSubsystem<UEnhancedInputLocalPlayerSubsystem>())
+				{
+					InputSystem->AddMappingContext(InputMapping, InputMappingPriority);
+				}
+			}
+		}
+
+		BP_OnActivated();
+		OnActivated().Broadcast();
+		BP_OnWidgetActivated.Broadcast();
+	}
+}
+```
+
+```cpp
+void UCommonActivatableWidget::NativeOnDeactivated()
+{
+	if (ensure(!bIsActive))
+	{
+		if (bSetVisibilityOnDeactivated)
+		{
+			SetVisibility(DeactivatedVisibility);
+			UE_LOG(LogCommonUI, Verbose, TEXT("[%s] set visibility to [%d] on deactivation"), *GetName(), *StaticEnum<ESlateVisibility>()->GetDisplayValueAsText(DeactivatedVisibility).ToString());
+		}
+
+		if (CommonUI::IsEnhancedInputSupportEnabled() && InputMapping)
+		{
+			if (const ULocalPlayer* LocalPlayer = GetOwningLocalPlayer())
+			{
+				if (UEnhancedInputLocalPlayerSubsystem* InputSystem = LocalPlayer->GetSubsystem<UEnhancedInputLocalPlayerSubsystem>())
+				{
+					InputSystem->RemoveMappingContext(InputMapping);
+				}
+			}
+		}
+
+		// Cancel any holds that were active
+		ClearActiveHoldInputs();
+
+		BP_OnDeactivated();
+		OnDeactivated().Broadcast();
+		BP_OnWidgetDeactivated.Broadcast();
+	}
+}
+```
     
 
 ![Common_UI_2](/assets/images/posts/commonui/Common_UI_2.png)
@@ -282,7 +285,7 @@ It requires 4 basic assets to set up the input for Common UI
 
 - A data blueprint for setting up the **input action icons for different input devices**.
 - To set up the Common Input Base Controller Data, go to **Common Input Settings > Platform Input**
-- 
+
 ![Common_UI_19](/assets/images/posts/commonui/Common_UI_19.png)
 
 ![Common_UI_20](/assets/images/posts/commonui/Common_UI_20.png)
