Add banner and digital twin page

--- a/_posts/2024-10-16-common-ui.md
+++ b/_posts/2024-10-16-common-ui.md
@@ -4,7 +4,7 @@ layout: post
 tags: [Unreal, UI, Programming]
 ---
 
-Notes for UE5 Common UI plugin.
+The Common UI plugin adds cross-platform widgets, style assets, and input routing to simplify building layered game interfaces.
 
 ---
 
